--- a/game/screen.css
+++ b/game/screen.css
@@ -647,7 +647,7 @@ img.itunes{
 }
 
 ul{
-	font-size: 1.4em;
+	font-size: 1.1em;
 }
 
 #credits, #updates{
